5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1642_2449.log
== TEST (2019-04-14 23:13:59) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - a*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb =! 0):
     print(x)
		print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 14
    if  (pb =! 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:14:09) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - a*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
     print(x)
		print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 16
    print(y)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:14:25) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - a*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
     print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 16
    print(y)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:14:38) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - a*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:15:12) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- EXECUTION TIME:
0.225074
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:15:26) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:16:29) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- EXECUTION TIME:
0.160012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:47:44) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:54:48) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:55:36) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:57:29) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
       print(x)
        print(y)
		
else:
	 print("Nao tem solucao")

-- EXECUTION TIME:
0.203413
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 16
    print(y)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:32) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
       print(x)
        print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 16
    print(y)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:59) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:03:03) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:05:46) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:12:43) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1 / pb
y = p2 / pb

if  (pb != 0):
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1 / pb
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:41) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d


if  (pb != 0):
	   x = p1/pb
		y = p2/pb
      print(x)
      print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 15
    y = p2/pb
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:15:30) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d


if  (pb != 0):
	   x = p1/pb
		 y = p2/pb
         print(x)
          print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 15
    y = p2/pb
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:16:38) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d


if  (pb != 0):
	   x = p1/pb
		 y = p2/pb
         print(x)
          print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 15
    y = p2/pb
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:20:01) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d
x = p1/(pb**-1)
y = p2/(pb**-1)


if  (pb != 0):
		print(x)
		print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = p1/(pb**-1)
ZeroDivisionError: 0.0 cannot be raised to a negative power
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:20:55) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d


if  (pb != 0):
     x = p1/pb
		y = p2/pb
		print(x)
		print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 15
    y = p2/pb
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:21:09) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d


if  (pb != 0):
     x = p1/pb
	   y = p2/pb
		print(x)
		print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 15
    y = p2/pb
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:21:49) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
c = float(input("digite c: "))
d = float(input("digite d: "))
e = float(input("digite e: "))
f = float(input("digite f: "))

p1 = c*e - b*f
p2 = a*f - c*d
pb = a*e - b*d


if  (pb != 0):
      x = p1/pb
	   y = p2/pb
		print(x)
		print(y)
		
else:
	 print("Nao tem solucao")

-- ERROR:
File "XXXX", line 15
    y = p2/pb
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
